crates/bevy_ecs_compile_fail_tests/tests/ui/world_query_derive.stderr
error[E0277]: the trait bound `&'static mut Foo: ReadOnlyWorldQuery` is not satisfied
 --> tests/ui/world_query_derive.rs:9:8
  |
9 |     a: &'static mut Foo,
  |        ^^^^^^^^^^^^^^^^ the trait `ReadOnlyWorldQuery` is not implemented for `&'static mut Foo`
  |
  = help: the following other types implement trait `ReadOnlyWorldQuery`:
            MutableUnmarked
            MutableMarkedReadOnly
            NestedMutableUnmarked
            bevy_ecs::change_detection::Ref<'__w, T>
            Has<T>
            AnyOf<()>
            AnyOf<(F0,)>
            AnyOf<(F0, F1)>
          and $N others
note: required by a bound in `_::assert_readonly`
 --> tests/ui/world_query_derive.rs:7:10
  |
7 | #[derive(WorldQuery)]
  |          ^^^^^^^^^^ required by this bound in `assert_readonly`
  = note: this error originates in the derive macro `WorldQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MutableMarked: ReadOnlyWorldQuery` is not satisfied
  --> tests/ui/world_query_derive.rs:20:8
   |
20 |     a: MutableMarked,
   |        ^^^^^^^^^^^^^ the trait `ReadOnlyWorldQuery` is not implemented for `MutableMarked`
   |
   = help: the following other types implement trait `ReadOnlyWorldQuery`:
             MutableUnmarked
             MutableMarkedReadOnly
             NestedMutableUnmarked
             bevy_ecs::change_detection::Ref<'__w, T>
             Has<T>
             AnyOf<()>
             AnyOf<(F0,)>
             AnyOf<(F0, F1)>
           and $N others
note: required by a bound in `_::assert_readonly`
  --> tests/ui/world_query_derive.rs:18:10
   |
18 | #[derive(WorldQuery)]
   |          ^^^^^^^^^^ required by this bound in `assert_readonly`
   = note: this error originates in the derive macro `WorldQuery` (in Nightly builds, run with -Z macro-backtrace for more info)
